<?xml version="1.0"?>
<package format="2">
  <name>ros-noetic-image</name>
  <version>0.0.1</version>
  <description>The ros-noetic-image package</description>

  <maintainer email="leonku1230@gmail.com">ikebe</maintainer>

  <license>Apache-2.0 License</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
